# Resume_Automation

resumefit/: .env.example  .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml
resumefit/.cursor/rules/: format-rules.md  standards.md
resumefit/backend/agents/: __init__.py  graph.py  nodes_part2.py  nodes_part3.py  nodes_part4.py  schemas.py
resumefit/backend/app/: api_schemas.py  database.py  main.py  settings.py
resumefit/backend/models/: __init__.py  entities.py
resumefit/backend/services/: analysis_service.py  cold_email.py  docx_editor.py  jd_parser.py  resume_parser.py
resumefit/docs/: AGENTS.md  BRIEF.md  PLAN.md
resumefit/tests/: test_jd_parser_llm.py  test_part1_persistence.py  test_part2_parsing.py  test_part3_analysis.py  test_part4_edit_and_email.py  test_part5_api.py
