[project]
name = "resumefit"
version = "0.1.0"
description = "JD-to-Resume Tailoring Agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
    "backend",
    "docs",
    ".env.example",
    ".gitignore",
    "README.md",
    "LICENSE",
    "PROGRESS.md",
    "pyproject.toml",
]
